--- a/src/app/shared/components/common-header/common-header.component.html
+++ b/src/app/shared/components/common-header/common-header.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between pb-7 pl-6 pr-2">
-    <h2 class="text-[28px] font-semibold text-black">{{ label }}</h2>
+<div class="flex items-center justify-between p-5">
+    <h2 class="text-[28px] font-semibold text-black leading-8">{{ label }}</h2>
     <ng-content></ng-content>
 </div>
