add css variables

--- a/src/app/features/user/course/components/course-lessons/course-lessons.component.html
+++ b/src/app/features/user/course/components/course-lessons/course-lessons.component.html
@@ -5,27 +5,27 @@
                 <p-accordion-header>
                     <div class="flex flex-col">
                         <p class="text-[#121923]">{{ module.title }}</p>
-                        <p class="text-[#686D73] text-[12px]">
+                        <p class="text-main-grey-600 text-[12px]">
                             {{ module.module }}
                         </p>
                     </div>
                     <div
                         class="grow flex items-center justify-end gap-3 mr-2.5"
                     >
-                        <app-info-block label="{{ module.lessonCount }} ta dars" iconLink="./src/svg/lesson.svg" styleClass="bg-[#EBEDEF]!"></app-info-block>
-                        <app-info-block label="{{ module.time }}" iconLink="./src/svg/clock.svg" styleClass="bg-[#EBEDEF]!"></app-info-block>
+                        <app-info-block label="{{ module.lessonCount }} ta dars" iconLink="./src/svg/lesson.svg" styleClass="bg-main-grey-200!"></app-info-block>
+                        <app-info-block label="{{ module.time }}" iconLink="./src/svg/clock.svg" styleClass="bg-main-grey-200!"></app-info-block>
                     </div>
                 </p-accordion-header>
                 <p-accordion-content>
                     <div class="flex flex-col gap-4 pl-10">
                         @for (lesson of module.lessons; track lesson.id; let i=$index) {
                             <div class="flex items-center gap-2">
-                                <p class="text-[#0E141B] leading-6">
+                                <p class="text-main-grey-900 leading-6">
                                     {{i+1}}. {{ lesson.title }}
                                 </p>
                             </div>
                             @if(i+1!=module.lessons.length){
-                              <hr class="border-[#E1E3E5]">
+                              <hr class="border-main-grey-300">
                             }
                         }
                     </div>
