--- a/src/app/features/user/course/pages/courses/courses.component.html
+++ b/src/app/features/user/course/pages/courses/courses.component.html
@@ -8,7 +8,7 @@
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
         <div
             *ngFor="let course of courses"
-            class="flex flex-col bg-[#F4F5F6] rounded-2xl overflow-hidden border border-[#1119221A] px-1 pt-1
+            class="flex flex-col bg-main-grey-100 rounded-2xl overflow-hidden border border-[#1119221A] px-1 pt-1
             shadow-[0px_4px_8px_0px_#0208171A] shadow-[0px_1px_3px_0px_#0208171A] shadow-[inset_0px_-1px_0px_0px_#00000012]"
         >
             <div class="rounded-xl overflow-hidden bg-white border border-[#1119221A]">
