--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -120,11 +120,11 @@
 
                   @if (isMenuOpen) {
                       <div
-                          class="absolute right-0 mt-2 p-1 min-w-64 rounded-xl border border-[#1119221A] shadow-[0px_0px_20px_#4747474d] bg-[#F4F5F6] z-50"
+                          class="absolute right-0 mt-2 p-1 min-w-64 rounded-xl border border-[#1119221A] shadow-[0px_0px_20px_#4747474d] bg-main-grey-100 z-50"
                       >
                           <div class="bg-white rounded-lg border border-[#1119221A]">
                             <div
-                                class="py-3 px-4 border-b border-[#EBEDEF] flex items-center gap-3"
+                                class="py-3 px-4 border-b border-main-grey-200 flex items-center gap-3"
                             >
                                 <div
                                     class="w-7 h-7 rounded-xl overflow-hidden cursor-pointer"
@@ -141,7 +141,7 @@
                             <ul class="px-2 py-1.5">
                                 <li>
                                     <a
-                                        class="flex items-center gap-1 px-2 py-1.5 hover:bg-[#F4F5F6] rounded-md space-x-2 cursor-not-allowed"
+                                        class="flex items-center gap-1 px-2 py-1.5 hover:bg-main-grey-100 rounded-md space-x-2 cursor-not-allowed"
                                     >
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <path d="M17 6L10 2L3 6V14L10 18L17 14V6Z" fill="white"/>
@@ -155,7 +155,7 @@
                                 </li>
                                 <li>
                                     <a
-                                        class="flex items-center gap-1 mt-1.5 px-2 py-1.5 hover:bg-[#F4F5F6] rounded-md space-x-2 cursor-not-allowed"
+                                        class="flex items-center gap-1 mt-1.5 px-2 py-1.5 hover:bg-main-grey-100 rounded-md space-x-2 cursor-not-allowed"
                                     >
                                         <svg
                                             width="20"
@@ -222,4 +222,4 @@
   </div>
 </div>
 
-<hr class="border-[#E1E3E5]">
+<hr class="border-main-grey-300">
