--- a/src/app/features/user/course/pages/course-view/course-view.component.html
+++ b/src/app/features/user/course/pages/course-view/course-view.component.html
@@ -1,6 +1,6 @@
 <div class="bg-[#F3F5F6]">
   <div class="max-w-[1175px] mx-auto border-x border-[#0208171A]">
-    <app-common-header [label]="course.title"></app-common-header>
+    <app-common-header [label]="course.title" [back]="true"></app-common-header>
   </div>
 </div>
 
@@ -8,14 +8,14 @@
 
 <div class="max-w-[1175px] mx-auto border-x border-[#0208171A] ">
     <div class="grid grid-cols-12">
-        <div class="col-start-1 col-end-5 flex flex-col gap-4 border-r border-[#E1E3E5]">
+        <div class="col-start-1 col-end-5 flex flex-col gap-4 border-r border-main-grey-300">
             <img [src]="course.image" class="" alt="" />
             <div class="px-5 py-6">
               <div class="flex flex-col gap-3 mb-6">
                 <div class="flex items-center justify-between">
-                  <p class="text-[#0E141B] font-semibold leading-6">Reyting</p>
+                  <p class="text-main-grey-900 font-semibold leading-6">Reyting</p>
                   <div class="flex items-center gap-3">
-                    <p class="text-[#42474D] leading-6">4.9</p>
+                    <p class="text-main-grey-700 leading-6">4.9</p>
                     <div class="flex items-center gap-1">
                       <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10.0002 12.656L12.8172 14.376L12.0512 11.166L14.5582 9.019L11.2682 8.755L10.0002 5.708L15.5 8L13 15.5L10.0002 12.656ZM10.0002 15L4.12223 18.59L5.72023 11.89L0.490234 7.41L7.35523 6.86L10.0002 0.5L12.6452 6.86L19.5112 7.41L14.2802 11.89L15.8782 18.59L10.0002 15Z" fill="#FFCC01"/>
@@ -36,21 +36,21 @@
 
                   </div>
                 </div>
-                <hr class="border-[#E1E3E5]">
+                <hr class="border-main-grey-300">
                 <div class="flex items-center justify-between">
-                  <p class="text-[#0E141B] font-semibold leading-6">Daraja</p>
+                  <p class="text-main-grey-900 font-semibold leading-6">Daraja</p>
                   <div class="flex items-center gap-3">
-                    <p class="text-[#42474D] leading-6">Beginner</p>
+                    <p class="text-main-grey-700 leading-6">Beginner</p>
                   </div>
                 </div>
-                <hr class="border-[#E1E3E5]">
+                <hr class="border-main-grey-300">
                 <div class="flex items-center justify-between">
-                  <p class="text-[#0E141B] font-semibold leading-6">Yil</p>
+                  <p class="text-main-grey-900 font-semibold leading-6">Yil</p>
                   <div class="flex items-center gap-3">
-                    <p class="text-[#42474D] leading-6">2025</p>
+                    <p class="text-main-grey-700 leading-6">2025</p>
                   </div>
                 </div>
-                <hr class="border-[#E1E3E5]">
+                <hr class="border-main-grey-300">
               </div>
               <a
               [routerLink]="['/course', course.id]"
@@ -78,13 +78,13 @@
                       />
                     </div>
                     <div class="flex flex-col gap-0.5">
-                      <p class="text-[#017AFF] text-sm font-medium leading-5">Mentor</p>
+                      <p class="text-main text-sm font-medium leading-5">Mentor</p>
                       <p class="font-semibold leading-5">{{ course.mentor }}</p>
                     </div>
                   </div>
                   <div class="flex flex-col items-end gap-0.5">
                     <p class="text-black text-4xl font-semibold leading-10">2 mln so’m</p>
-                    <p class="text-[#017AFF] text-sm font-medium leading-5">Kurs narxi</p>
+                    <p class="text-main text-sm font-medium leading-5">Kurs narxi</p>
                   </div>
                 </div>
                 <p class="max-w-[655px] leading-6 text-[#4D5663]">
@@ -102,7 +102,7 @@
                         </svg>
 
                         <p
-                            class="text-[#0E141B] font-semibold"
+                            class="text-main-grey-900 font-semibold"
                         >
                             {{ tag }}
                         </p>
