--- a/src/app/shared/components/info-block/info-block.component.html
+++ b/src/app/shared/components/info-block/info-block.component.html
@@ -1,5 +1,5 @@
 <p
-    class="flex items-center gap-1.5 bg-[#F4F5F6] py-1.5 px-2 rounded-lg border border-[#1119221A] text-sm text-[#0E141B]" [class]="styleClass"
+    class="flex items-center gap-1.5 bg-main-grey-100 py-1.5 px-2 rounded-lg border border-[#1119221A] text-sm text-main-grey-900" [class]="styleClass"
 >
   @if(iconLink){
     <img [src]="iconLink" alt="" />
